@@ -51,22 +51,26 @@ ipns() {
    # addresses
    
    ipn  1 10.0.0.20
-   ipn  2 10.0.0.5  10.0.0.0/28 200.100.162.92 200.100.162.93 100.99.218.222
+   ipn  2 10.0.0.5  10.0.0.0/28 #200.100.162.92 200.100.162.93 100.99.218.222
    ipn  3 10.0.0.17
    ipn  4 10.0.0.18
-   ipn  5 10.0.0.19
-   ipn  6 10.0.0.21 10.0.2.0/26 200.100.162.17
-   ipn  7 10.0.0.22 10.1.2.0/24
-   ipn  8 10.0.0.23
+   ipn  5 10.0.0.19 10.3.0.0/16
+   ipn  6 10.0.0.21 10.0.2.0/26 #200.100.162.17
+   ipn  7 10.0.0.22 10.1.2.0/24 # wappla, off
+   ipn  8 10.0.0.23 # stefan, off
    ipn  9 10.0.0.24 10.13.0.0/16
    ipn 10 10.0.0.25
    ipn 11 10.0.0.26
    ipn 12 10.0.0.27 10.0.2.64/26
    ipn 13 10.0.0.28 10.0.3.0/24
-   ipn 14 10.0.0.29 10.1.1.0/24
+   ipn 14 10.0.0.29 10.1.1.0/24 # fwkw, off
    # mind the gateway ip gap
    ipn 15 10.9.0.30 10.0.4.0/24
    ipn 16 10.9.0.31
+   ipn 17 10.9.0.32 10.42.0.0/16
+   ipn 18 10.9.0.33
+   ipn 19 10.9.0.34
+   #ipn 20 10.9.0.35
 }
 
 if [ "$1" == "--fw" ]; then
@@ -81,7 +85,8 @@ else
 
    # first set the link up and initialize the interface ip
    # address.
-   ip link set $IFNAME address $MAC mtu $MTU up
+   ip link set $IFNAME address $MAC
+   ip link set $IFNAME mtu $MTU up
    ADDR_ONLY=1 ipns # set addr only
 
    # now initialize the main vpn routes (10.0/8)
@@ -108,10 +113,17 @@ else
 
    elif [ $NODENAME = marco ]; then
       ip addr add 200.100.162.17 dev $IFNAME
-      ip route add 200.100.162.79 dev ppp0
-      ip route add 200.100.162.95 dev ppp0
+
+      for addr in 79 89 90 91 92 93 94 95; do
+         ip route add 200.100.162.$addr dev ppp0
+      done
       ip route add 200.100.76.0/23 dev ppp0
       ip route add src 200.100.162.17 200.100.0.0/16 via 10.0.0.17 dev $IFNAME
+
+   elif [ $NODENAME = ruth ]; then
+      ip route add 200.100.162.17 via 10.0.0.21 dev vpn0
+      ip route add 200.100.162.92 via 10.0.0.5 dev vpn0
+      ip route add 200.100.162.93 via 10.0.0.5 dev vpn0
 
    fi
 
