@@ -60,7 +60,7 @@ connect = always
 # nethype
 node = rain
 enable-rawip = yes
-hostname = 100.99.218.200
+hostname = 145.253.105.130
 router-priority = 10
 connect = always
 
@@ -70,10 +70,12 @@ enable-rawip = yes
 
 # stefan@ka
 node = wappla
+connect = never
 
 # stefan@lap
 node = stefan
 udp-port = 408
+connect = never
 
 # paul@wg
 node = n8geil
@@ -97,6 +99,7 @@ hostname = 100.251.143.181
 
 # stefan@kwc.at
 node = fwkw
+connect = never
 on stefan connect = always
 on wappla connect = always
 hostname = 182.73.81.146
@@ -114,4 +117,25 @@ hostname = 200.100.162.79
 connect = always
 router-priority = 40
 
+# jkneer@marvin
+node = marvin
+enable-rawip = yes
+enable-udp = no
+
+# jkneer@entrophy
+node = entrophy
+enable-udp = no
+enable-tcp = yes
+
+# mr. primitive
+node = voyager
+enable-udp = no
+enable-tcp = no
+on voyager enable-tcp = yes
+on voyager enable-udp = yes
+
+# v-server (barbados.dn-systems.de)
+#node = vserver
+#enable-udp = yes
+#hostname = 193.108.181.74
 
